fixed app download link

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -2,7 +2,7 @@
   <button ion-fab mini (click)="toggle_mod_info()"><ion-icon name="ios-information-circle-outline"></ion-icon></button>
 </ion-fab>
 <!-- <ion-fab bottom left>
-  <a href="/app.apk"><button ion-fab mini color="secondary"><ion-icon name="logo-android"></ion-icon></button></a>
+  <a href="/Bunkmate/app.apk"><button ion-fab mini color="secondary"><ion-icon name="logo-android"></ion-icon></button></a>
 </ion-fab> -->
 <div class="info_modal_container" *ngIf="mod_info==1" (click)="toggle_mod_info()">
 </div>
